[gd_scene load_steps=5 format=3 uid="uid://dugdbfum5dano"]

[ext_resource type="Theme" uid="uid://dkk6wb0dyxbg4" path="res://Themes/Theme.tres" id="1_d2qod"]
[ext_resource type="Script" path="res://Scripts/cardSelector.gd" id="1_xd66s"]
[ext_resource type="PackedScene" uid="uid://dn2xehcjq3om8" path="res://Scenes/UICard.tscn" id="2_duu60"]
[ext_resource type="PackedScene" uid="uid://y0pw1j1wxrte" path="res://Scenes/CardLocationContainer.tscn" id="3_cvsnk"]

[node name="CardSelector" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_xd66s")
uiCardScene = ExtResource("2_duu60")
locationContainerScene = ExtResource("3_cvsnk")
metadata/_edit_use_anchors_ = true

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -417.0
offset_top = -250.0
offset_right = 417.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_d2qod")
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer2" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_d2qod")
horizontal_scroll_mode = 0

[node name="ResultsContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Confirm" type="Button" parent="Background/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Confirm"

[connection signal="button_down" from="Background/MarginContainer/VBoxContainer2/Confirm" to="." method="_on_confirm_button_down"]
